diagweave/tests/ui/derive/set_copy_fail.stderr
error[E0204]: the trait `std::marker::Copy` cannot be implemented for this type
 --> tests/ui/derive/set_copy_fail.rs:4:14
  |
4 |     #[derive(Copy, Clone)]
  |              ^^^^
5 |     SetA = {
6 |         Variant1(String),
  |                  ------ this field does not implement `std::marker::Copy`
