diagweave/tests/ui/derive/set_copy_fail.rs
use diagweave::set;

set! {
    #[derive(Copy, Clone)]
    SetA = {
        Variant1(String),
    }
}

fn main() {}